--- a/lib/sizzle_lints.yaml
+++ b/lib/sizzle_lints.yaml
@@ -131,7 +131,7 @@ linter:
     - sized_box_shrink_expand
     - slash_for_doc_comments
     - sort_child_properties_last
-    - sort_pub_dependencies
+    # - sort_pub_dependencies
     - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
