rm rule diagnostic_describe_all_properties

--- a/lib/sizzle_lints.yaml
+++ b/lib/sizzle_lints.yaml
@@ -65,7 +65,7 @@ linter:
     - curly_braces_in_flow_control_structures
     - depend_on_referenced_packages
     - deprecated_consistency
-    - diagnostic_describe_all_properties
+    # - diagnostic_describe_all_properties
     - directives_ordering
     - empty_catches
     - empty_constructor_bodies
